<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.christian.quintero.myapplication.publicidad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            style="@style/titulos"
            android:text="@string/app_name"
            android:id="@+id/principal1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/guatape"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/titulos"
            android:text="@string/info"
            android:id="@+id/principal2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:src="@drawable/hoteles"
                    android:onClick="iHotel"
                    />
                <TextView
                    style="@style/titulos.texto"
                    android:text="@string/hotel"
                    android:id="@+id/hot"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.1">
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:src="@drawable/bares"
                    android:onClick="iBar"/>
                <TextView
                    style="@style/titulos.texto"
                    android:text="@string/bar"
                    android:id="@+id/bar"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:src="@drawable/sitios"
                    android:onClick="iSitios"/>
                <TextView
                    style="@style/titulos.texto"
                    android:text="@string/sitio"
                    android:id="@+id/sit"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.1">
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:src="@drawable/demo"
                    android:onClick="iDemografia"/>
                <TextView
                    style="@style/titulos.texto"
                    android:text="@string/infDe"
                    android:id="@+id/dem"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    </LinearLayout>


</ScrollView>
